# steamcontroller

./: .gitignore  CMakeLists.txt  README.md  common.h  sclibexample.c  steamcontroller_feedback.c  steamcontroller_libusb.c  steamcontroller_linux.c  steamcontroller_setup.c  steamcontroller_state.c  steamcontroller_win32.c  steamcontroller_wireless.c
include/: sc.h
